--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSetting": {
-    "Secret": "TravellerAuthentication"
+    "Secret": "TravelerAuthentication"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Janglee\\JANGLEE;Initial Catalog=Traveller;Persist Security Info=False;User ID=sa;Password=Tantai4899@@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=Janglee\\JANGLEE;Initial Catalog=Traveler;Persist Security Info=False;User ID=sa;Password=Tantai4899@@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
