--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -5,10 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AppSetting": {
-    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
-  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystem;Integrated Security=True"
+  },
+  "AppSettings": {
+    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
+  },
+  "VnPaySettings": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://travelers.ddns.net",
+    "TmnCode": "QRJ3MHZ3",
+    "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
 }
