--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystem;Integrated Security=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
   },
   "AppSettings": {
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
