--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "urls": "https://localhost:5000",
+  "urls": "https://*:443",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,8 +13,9 @@
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
   },
   "VnPaySettings": {
-    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://travelers.ddns.net",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "IpnUrl": "https://116.106.164.131/pay/ipn",
+    "ReturnUrl": "https://localhost",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
