--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -13,7 +13,8 @@
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
   },
   "VnPaySettings": {
-    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "IpnUrl": "https://116.106.164.131/pay/ipn",
     "ReturnUrl": "https://travelers.ddns.net",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
