--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -14,8 +14,8 @@
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "IpnUrl": "https://116.106.164.131/pay/ipn",
-    "ReturnUrl": "https://localhost",
+    "IpnUrl": "https://dev-travelers.ddns.net/pay/ipn",
+    "ReturnUrl": "https://dev-travelers.ddns.net/pay/result",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
