--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -14,8 +14,8 @@
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "IpnUrl": "https://116.106.164.131/pay/ipn",
-    "ReturnUrl": "https://travelers.ddns.net",
+    "IpnUrl": "https://travelers.ddns.net/pay/ipn",
+    "ReturnUrl": "https://travelers.ddns.net/pay/result",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
