--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -22,7 +22,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="logs" />
+    <Compile Remove="logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="logs\**" />
   </ItemGroup>
 
   
