--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -10,7 +10,9 @@
     "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystemDev;Integrated Security=True"
   },
   "AppSettings": {
-    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
+    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
+    "JwtIssuer": "TravelerBE",
+    "JwtAudience": "TravelerBE"
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
