--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -10,7 +10,9 @@
     "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
   },
   "AppSettings": {
-    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX"
+    "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
+    "JwtIssuer": "TravelerBE",
+    "JwtAudience": "TravelerBE"
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
