added FileUploadService, Location CreateAttachment();

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -14,6 +14,10 @@
     "JwtIssuer": "TravelerBE",
     "JwtAudience": "TravelerBE"
   },
+  "CloudStorageSettings": {
+    "Bucket": "capstone-2023-4ee67.appspot.com",
+    "Folder": "attachments"
+  },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "IpnUrl": "https://dev-travelers.ddns.net/pay/ipn",
