added pagination, update location api, cloud storage

--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -14,9 +14,12 @@
     "JwtIssuer": "TravelerBE",
     "JwtAudience": "TravelerBE"
   },
+  "CloudStorageSettings": {
+    "Bucket": "capstone-2023-4ee67.appspot.com",
+    "Folder": "attachments"
+  },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "IpnUrl": "https://travelers.ddns.net/pay/ipn",
     "ReturnUrl": "https://travelers.ddns.net/pay/result",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
