update cloud storage logics.

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -15,7 +15,7 @@
     "JwtAudience": "TravelerBE"
   },
   "CloudStorageSettings": {
-    "Bucket": "capstone-2023-4ee67.appspot.com",
+    "Bucket": "910a159a-5a3b-4b31-bdfb-07d520cc62cf",
     "Folder": "attachments"
   },
   "VnPaySettings": {
