--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -17,6 +17,18 @@
     <None Update="Firebase\firebase-admin-sdk.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="CloudServices\cloud-storage.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="CloudServices\firebase-admin-sdk.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ExternalServices\CloudStorage\cloud-storage.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ExternalServices\Firebase\firebase-admin-sdk.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
