--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -33,6 +33,15 @@
         <None Update="EFCore\Seeds\locations.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="EFCore\Seeds\tour-groups.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="EFCore\Seeds\tours.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="EFCore\Seeds\traveler-in-tour-group.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
