booking, transaction apis

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -20,7 +20,7 @@
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://dev-travelers.ddns.net/pay/result",
+    "ReturnUrl": "https://localhost/pay/result",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
