--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "urls": "https://*:443",
+  "urls": "http://*:8080",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
+    "DefaultConnection": "Data Source=167.172.90.41;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
   },
   "AppSettings": {
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
