--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -41,6 +41,9 @@
         <None Update="EFCore\Seeds\tickets.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="EFCore\Seeds\attachments.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
