--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=167.172.90.41;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
+    "DefaultConnection": "Data Source=travelers-asia-db.database.windows.net;Initial Catalog=TravelerSystem;User ID=truongnx;Password=Traveler123"
   },
   "AppSettings": {
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
