--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -14,6 +14,7 @@
         </PackageReference>
         <PackageReference Include="MimeTypesMap" Version="1.0.8" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Scrutor" Version="4.2.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
