--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -20,7 +20,7 @@
   },
   "VnPaySettings": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://mrkool.online/transactions/result",
+    "ReturnUrl": "https://dotnet-travelers.fly.dev/transactions/result",
     "TmnCode": "QRJ3MHZ3",
     "HashSecret": "IUHXMPKFDIICFYUDLEFOZTRTFUVZOGPN"
   }
