--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -26,7 +26,7 @@
         <None Update="EFCore\Seeds\travelers.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="EFCore\Seeds\locations.json">
+        <None Update="EFCore\Seeds\tour-flows.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="EFCore\Seeds\tour-groups.json">
