--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -50,6 +50,9 @@
         <None Update="EFCore\Seeds\schedules.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="EFCore\Seeds\staffs.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
