--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -53,6 +53,9 @@
         <None Update="EFCore\Seeds\staffs.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="EFCore\Seeds\tour-variants.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
