--- a/Application/Properties/launchSettings.json
+++ b/Application/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Application": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://*:8443;http://*:8080",
       "environmentVariables": {
