fix EfCore logging level to Warning

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Microsoft.EntityFrameworkCore.Database": "Information"
+    }
+  },
   "Urls": "https://*:443",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystemDev;Integrated Security=True"
