--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -1,4 +1,9 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Microsoft.EntityFrameworkCore.Database": "Warning"
+    }
+  },
   "Urls": "http://*:8080",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=travelers-asia-db.database.windows.net;Initial Catalog=TravelerSystem;User ID=truongnx;Password=Traveler123"
