--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -14,7 +14,7 @@
     "JwtAudience": "TravelerBE"
   },
   "CloudStorageSettings": {
-    "Bucket": "capstone-2023-4ee67.appspot.com",
+    "Bucket": "265fabb4-ef4f-46b1-874f-e20d6ca128b4",
     "Folder": "attachments"
   },
   "VnPaySettings": {
