--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -14,6 +14,7 @@
         </PackageReference>
         <PackageReference Include="MimeTypesMap" Version="1.0.8" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="RazorEngineCore" Version="2022.8.1" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
@@ -35,6 +36,9 @@
 
     <ItemGroup>
         <None Remove="logs\**" />
+        <None Update="Workers\Notification\Templates\attendance.html">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
