change name TourVariant to Trip

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -44,7 +44,7 @@
         <None Update="EFCore\Seeds\schedules.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="EFCore\Seeds\tour-variants.json">
+        <None Update="EFCore\Seeds\trips.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="EFCore\Seeds\notifications.json">
