--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -6,7 +6,7 @@
   },
   "Urls": "http://*:8080",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=188.166.216.178;Initial Catalog=TravelerSystem;User ID=sa;Password=SenseERP@net"
+    "DefaultConnection": "Data Source=178.128.30.115;Initial Catalog=TravelerSystem;User ID=sa;Password=Traveler123"
   },
   "AppSettings": {
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
