--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     </ItemGroup>
 
