--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -15,4 +15,15 @@
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Models\TourVariant\TourVariantUpdateModel.cs" />
+      <Compile Remove="Interfaces\ITicketService.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\Admin\" />
+      <Folder Include="Models\AttendanceEvent\" />
+      <Folder Include="Models\TourFlow\" />
+    </ItemGroup>
+
 </Project>
