add weather api

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -51,6 +51,12 @@
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Remove="EFCore\Seeds\tour-variants.json" />
+        <None Update="EFCore\Seeds\weather-alerts.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="EFCore\Seeds\weather-forecasts.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
