[add] attendance service: connect firebase

--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Firebase": {
+    "RealtimeDatabase": {
+      "BaseUrl": "https://travel-378415-default-rtdb.asia-southeast1.firebasedatabase.app/",
+      "Secret": "uszOshIJOhz1OyEkL9uPrrMFpt7qD7MXj6I9jxwl"
+    }
+  }
 }
