--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+        <PackageReference Include="FireSharp" Version="2.0.4" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     </ItemGroup>
 
