[minor fix]: - restore developer setting - fix nullable

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -6,7 +6,7 @@
   },
   "Urls": "https://*:443",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystemDev;User ID=sa;Password=Abc123123"
+    "DefaultConnection": "Data Source=.;Initial Catalog=TravelerSystemDev;Integrated Security=True"
   },
   "AppSettings": {
     "JwtSecret": "Upr5dpcz3nQS4V2MYyPFJm24rgTmwX",
