--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
         <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+        <PackageReference Include="Google.Cloud.Firestore" Version="3.3.0" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.4.0" />
         <PackageReference Include="Mapster" Version="7.3.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
@@ -35,10 +36,6 @@
     <ItemGroup>
       <Compile Remove="Settings\VnPaySettings.cs" />
       <Compile Remove="Settings\CloudStorageSettings.cs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="ExternalServices\VnPay\Models\" />
     </ItemGroup>
 
 </Project>
