add weather forecast api

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -54,6 +54,9 @@
         <None Update="EFCore\Seeds\weather-alerts.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="EFCore\Seeds\weather-forecasts.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
