--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -14,5 +14,6 @@
         <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
         <PackageReference Include="FireSharp" Version="2.0.4" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
+        <PackageReference Include="MimeTypesMap" Version="1.0.8" />
     </ItemGroup>
 </Project>
