--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -42,10 +42,13 @@
         <None Update="Workers\Notification\Templates\attendance.html">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Controllers\Statics\Trip.xlsx">
+        <None Update="Controllers\Statics\Trip.zip">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="Controllers\Statics\Tour.zip">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Workers\Notification\Templates\emergency.html">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
