fix weather update worker

--- a/Application/appsettings.Development.json
+++ b/Application/appsettings.Development.json
@@ -20,5 +20,9 @@
   "SmtpSettings": {
     "Email": "truongnxse140713@fpt.edu.vn",
     "Password": "gyuklbxylmzojmxb"
+  },
+  "WeatherApiSettings": {
+    "ApiKey": "e9a560f9a61e445193792558231607",
+    "ForecastRange": 3
   }
 }
