--- a/Application/appsettings.Production.json
+++ b/Application/appsettings.Production.json
@@ -16,5 +16,9 @@
   "CloudStorageSettings": {
     "Bucket": "265fabb4-ef4f-46b1-874f-e20d6ca128b4",
     "Folder": "attachments"
+  },
+  "SmtpSettings": {
+    "Email": "truongnxse140713@fpt.edu.vn",
+    "Password": "gyuklbxylmzojmxb"
   }
 }
